<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.app</groupId>
    <artifactId>CEC</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21</version>
        </dependency>

        <dependency>
            <groupId>com.github.jiconfont</groupId>
            <artifactId>jiconfont-javafx</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.42.0.0</version>
        </dependency>
        <dependency>
            <groupId>site.kason</groupId>
            <artifactId>dbutil</artifactId>
            <version>2.1.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>org.app.Main</mainClass>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>shade-all</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!-- make sure we *attach* the shaded jar so it shows up in target/ -->
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <!-- name it with classifier “shaded” -->
                            <shadedClassifierName>shaded</shadedClassifierName>
                            <!-- Make sure the resulting JAR has your Main‑Class in its manifest -->
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>org.app.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.4</version>
                <configuration>

                    <input>${project.build.directory}</input>
                    <winMenu>true</winMenu>
                    <winConsole>true</winConsole>
                    <mainJar>${project.build.finalName}-shaded.jar</mainJar>
                    <mainClass>org.app.Main</mainClass>

                    <name>CEC</name>
                    <appVersion>0.1.0</appVersion>
                    <vendor>app.org</vendor>

                    <destination>target/installer</destination>
                    <icon>src/main/resources/org/app/icon.ico</icon>
                    <modulePaths>
                        <modulePath>C:\javafx-jmods-23.0.2</modulePath>
                    </modulePaths>
                    <addModules>javafx.controls,javafx.fxml,java.sql</addModules>
                    <arguments>
                        <argument>--add-modules</argument>
                        <argument>javafx.controls,javafx.fxml,java.sql</argument>
                    </arguments>
                </configuration>
                <executions>
                    <execution>
                        <id>make-app-image</id>
                        <phase>package</phase>

                        <goals>
                            <goal>jpackage</goal>
                        </goals>

                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.build.directory}/installer</directory>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>